--- a/partials/home.html
+++ b/partials/home.html
@@ -1,1 +1,94 @@
-﻿<h2>Home</h2>
+﻿<div class="page">
+    <h2 class="margin-bottom-30">Latest projects</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="project">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-segmantics"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Segmantics</h3>
+                        <p>The worlds first software as a service risk management webapp. Built using the latest JavaScript...</p>
+                        <a class="read">read</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="project">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-aqua"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Aqua Cars</h3>
+                        <p>Both Mobile and Desktop applicationsfor the UK’s third largest taxi company were built using HTML5,...</p>
+                        <a class="read">read</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="middle">
+        <div class="row">
+            <div class="col-md-7">
+                <h2 class="margin-bottom-15 overflow">GDCD <a class="read pull-right margin-top-10">view</a></h2>
+                <div class="gdcd"></div>
+            </div>
+            <div class="col-md-5">
+                <h2 class="margin-bottom-15">Technologies</h2>
+                <div class="tech">
+                    <div class="row">
+                        <div class="col-md-6">
+                            Knockout.js
+                        </div>
+                        <div class="col-md-6">
+                            <span>Angular.js</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            C#
+                        </div>
+                        <div class="col-md-5">
+                            <span>ASP.NET</span>
+                        </div>
+                        <div class="col-md-5">
+                            PHP
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            jQuery
+                        </div>
+                        <div class="col-md-8">
+                            <span>HTML5 &amp; CSS3</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <span>MSSQL</span>
+                        </div>
+                        <div class="col-md-4">
+                            MySQL
+                        </div>
+                        <div class="col-md-4">
+                            <span>LINQ</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            Mobile apps
+                        </div>
+                        <div class="col-md-6">
+                            <span>Node.js</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
