--- a/css/site.less
+++ b/css/site.less
@@ -1,12 +1,31 @@
-﻿@bodyimage: url(../images/bg.png);
+﻿/*
+
+    Created on : 2013-12-18
+    Author : Greg Duncan
+    Description: Stylesheet for front-end website.
+
+    0. Less
+    1. Resets
+    2. Globals
+    3. Header Nav
+    4. Masthead
+    5. Sidebar
+    6. Content
+
+**/
+
+/* 0. Less */
+@bodyimage: url(../images/bg.png);
 @brown: #5F5050;
 @white: #fff;
 @grey: #333;
 @heading-font: 'Archivo Black', sans-serif;
 @standard-font: 'Open Sans', sans-serif;
+@georgia-font: Georgia;
 
-a, abbr, acronym, address, applet, article, aside, audio, b, blockquote, big, body, center, canvas, caption, cite, code, command, datalist, dd, del, details, dfn, dl, div, dt, em, embed, fieldset, figcaption, figure, font, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, keygen, label, legend, li, meter, nav, object, ol, output, p, pre, progress, q, s, samp, section, small, span, source, strike, strong, sub, sup, table, tbody, tfoot, thead, th, tr, td, video, tt, u, ul, var
-{
+
+/* 1. Resets */
+a, abbr, acronym, address, applet, article, aside, audio, b, blockquote, big, body, center, canvas, caption, cite, code, command, datalist, dd, del, details, dfn, dl, div, dt, em, embed, fieldset, figcaption, figure, font, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, keygen, label, legend, li, meter, nav, object, ol, output, p, pre, progress, q, s, samp, section, small, span, source, strike, strong, sub, sup, table, tbody, tfoot, thead, th, tr, td, video, tt, u, ul, var {
     margin: 0;
     padding: 0;
     outline: 0;
@@ -16,164 +35,178 @@ a, abbr, acronym, address, applet, article, aside, audio, b, blockquote, big, bo
     font-size: 100%;
 }
 
-ol, ul
-{
+ol, ul {
     list-style: none;
 }
 
-blockquote, q
-{
+blockquote, q {
     quotes: none;
 }
 
-table, table td
-{
+table, table td {
     padding: 0;
     border: none;
     border-collapse: collapse;
 }
 
-img
-{
+img {
     vertical-align: bottom;
 }
 
-a img
-{
+a img {
     border: none;
 }
 
-embed
-{
+embed {
     vertical-align: top;
 }
 
-a
-{
+a {
     cursor: pointer;
 }
 
-body
-{
+/* 2. Globals */
+h1, h2, h3, h4 {
+    font-family: @heading-font;
+    color: @brown;
+}
+
+body {
     background: @bodyimage;
     font-family: @standard-font;
 }
 
-.overflow
-{
+.overflow {
     overflow: hidden;
 }
 
-.pull-left
-{
-    float: left;
-}
-
-.pull-right
-{
-    float: right;
-}
-
-.btn
-{
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    display: inline-block;
-    margin-bottom: 0;
-    padding: 4px 12px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #A2A2A2;
-    border-radius: 4px 4px 4px 4px;
-    -moz-border-image: none;
-    -o-border-image: none;
-    -webkit-border-image: none;
-    border-image: none;
-    background-color: #F5F5F5;
-    background-image: linear-gradient(to bottom, #FFFFFF, #E6E6E6);
-    background-repeat: repeat-x;
-    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
-    color: @brown;
-    vertical-align: middle;
-    text-align: center;
-    text-transform: capitalize;
-    -webkit-text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-    font-size: 13px;
-    line-height: 20px;
-    cursor: pointer;
-}
-
-.btn:hover
-{
-    background-color: #e6e6e6;
-    *background-color: #d9d9d9;
-    background-image: none;
-}
-
-.container
-{
+.container {
     padding: 0;
     max-width: 1175px;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
-.navbar
+.margin-bottom-5
 {
+    margin-bottom:5px;
+}
+
+.margin-bottom-10
+{
+    margin-bottom:10px;
+}
+
+.margin-bottom-15
+{
+    margin-bottom:15px;
+}
+
+.margin-bottom-20
+{
+    margin-bottom:20px;
+}
+
+.margin-bottom-30
+{
+    margin-bottom:30px;
+}
+
+.margin-top-5
+{
+    margin-top:5px;
+}
+
+.margin-top-10
+{
+    margin-top:10px;
+}
+
+.margin-top-15
+{
+    margin-top:15px;
+}
+
+.margin-top-20
+{
+    margin-top:20px;
+}
+
+.margin-top-30
+{
+    margin-top:30px;
+}
+
+.padding-bottom-5
+{
+    padding-bottom:5px;
+}
+
+.padding-bottom-10
+{
+    padding-bottom:10px;
+}
+
+.padding-bottom-15
+{
+    padding-bottom:15px;
+}
+
+.padding-bottom-20
+{
+    padding-bottom:20px;
+}
+
+.padding-bottom-30
+{
+    padding-bottom:30px;
+}
+
+/* 3. Header Nav */
+.navbar {
     position: absolute;
     top: 0;
     text-transform: uppercase;
     font-family: @heading-font;
 }
 
-.navbar .nav > li
-{
+.navbar .nav > li {
     float: left;
 }
 
-.navbar .nav > li > a
-{
+.navbar .nav > li > a {
     display: block;
     padding: 10px 20px;
     color: @brown;
     font-size: 18px;
 }
 
-.navbar .nav > li > a.active
-{
+.navbar .nav > li > a.active {
     background: @brown;
     color: @white;
     -webkit-text-shadow: none;
     text-shadow: none;
 }
 
-.navbar .nav > li > a:hover
-{
+.navbar .nav > li > a:hover {
     background: @brown;
     color: @white;
     -webkit-text-shadow: none;
     text-shadow: none;
 }
 
-.content
-{
+.content {
     padding-right: 0;
     padding-left: 0;
 }
 
-.masthead
-{
+/* 4. Masthead */
+.masthead {
     margin-left: 60px;
     height: 295px;
     background: url(../images/header.png) repeat-x bottom;
 }
 
-
-.masthead:before
-{
+.masthead:before {
     position: relative;
     left: -60px;
     display: inline-block;
@@ -184,18 +217,16 @@ body
     content: "";
 }
 
-.masthead:after
-{
+.masthead:after {
     display: inline-block;
     float: right;
     width: 600px;
     height: 295px;
-    background: url(../images/header-right-new.png) no-repeat bottom;
+    background: url(../images/header-right-new-new.png) no-repeat bottom;
     content: "";
 }
 
-.masthead > a
-{
+.masthead > a {
     position: relative;
     top: 68px;
     right: 40px;
@@ -205,8 +236,7 @@ body
     background: url(../images/logo.png) no-repeat;
 }
 
-.masthead > a:after
-{
+.masthead > a:after {
     position: relative;
     top: 150px;
     display: inline-block;
@@ -217,114 +247,16 @@ body
     font-family: @heading-font;
 }
 
-.content-inner
-{
-    min-height: 700px;
-    padding-bottom:50px;
-}
-
-.row
-{
-}
-
-.row h3
-{
-    margin-bottom: 10px;
-    color: @brown;
-    text-transform: uppercase;
-    font-size: 22px;
-    font-family: @heading-font;
-}
-
-.project
-{
-    float: left;
-    margin: 0 20px 50px 0;
-    width: 520px;
-    color: @brown;
-}
-
-.project a
-{
-    color: @brown;
-}
-
-.project p
-{
-    color: #333;
-}
-
-.project-image
-{
-    float: left;
-    margin-right: 20px;
-    width: 140px;
-    height: 130px;
-    background: url(http://www.gregduncan.co.uk/App_Themes/Default/Images/Project/Photos/25.png) no-repeat;
-    -webkit-box-shadow: 1px 2px 7px #333;
-    box-shadow: 1px 2px 7px #333;
-}
-
-.project-description
-{
-    float: left;
-    width: 350px;
-}
-
-.skills
-{
-    min-height: 300px;
-    margin: 0 20px 50px 0;
-    padding: 20px;
-    background: url(../images/leather.png);
-}
-
-.skills > ul
-{
-    float: left;
-    margin: 0 60px 20px 0;
-    font: 14px;
-}
-
-.skills > ul > li.heading
-{
-    font-weight: bold;
-}
-
-.gdcd 
-{
-    min-height:200px;
-}
-
-.gdcd > ul > li
-{
-    float:left;
-    margin-right:10px;
-}
-
-.gdcd > ul > li > a
-{
-    text-decoration:underline;
-    color:@grey;
-}
-
-.about > p
-{
-    padding-bottom:10px;
-}
-
-.sidebar
-{
-    width:300px;
+/* 5. Sidebar */
+.sidebar {
+    width: 300px;
     padding: 40px 30px 0 30px;
     min-height: 240px;
     background: url(../images/rhs.png) no-repeat;
     float: right;
-    margin-right: 15px;
 }
 
-.sidebar:after
-{
+.sidebar:after {
     position: relative;
     right: 30px;
     display: block;
@@ -334,15 +266,13 @@ body
     content: "";
 }
 
-.sidebar h2
-{
+.sidebar h2 {
     color: @white;
     font-size: 18px;
     line-height: 25px;
 }
 
-.sidebar h3
-{
+.sidebar h3 {
     margin: 40px 0 10px 0;
     color: @white;
     text-transform: uppercase;
@@ -351,13 +281,11 @@ body
     line-height: 25px;
 }
 
-.sidebar ul > li
-{
+.sidebar ul > li {
     margin-bottom: 15px;
 }
 
-.sidebar input[type="text"]
-{
+.sidebar input[type="text"] {
     padding: 8px 0;
     width: 230px;
     border: 3px solid @brown;
@@ -367,8 +295,7 @@ body
     font-family: @standard-font;
 }
 
-.sidebar textarea
-{
+.sidebar textarea {
     padding: 8px 0;
     width: 230px;
     height: 120px;
@@ -380,24 +307,198 @@ body
     font-family: @standard-font;
 }
 
-.sidebar .recommends
-{
+.sidebar .recommends {
     width: 224px;
     height: 180px;
     border: 3px solid @brown;
     background: url(../images/recommends.png) no-repeat bottom;
 }
 
-.sidebar .recommends > a
-{
+.sidebar .recommends > a {
     display: block;
     width: 224px;
     height: 180px;
 }
 
-.sidebar .recommends > a:hover
-{
+.sidebar .recommends > a:hover {
     background: #000;
     opacity: 0.3;
 }
 
+/* 6. Content */
+.content-inner 
+{
+    min-height: 700px;
+    padding-bottom: 50px;
+}
+
+.page
+{
+    padding-top:20px;
+}
+
+.page h2
+{
+    font-size:30px;
+}
+
+/* 7. Projects */
+.project {
+    color: @brown;
+    font-family:@georgia-font;
+    margin-bottom:60px;
+}
+
+.project a {
+    color: @brown;
+}
+
+.project p {
+    color: #333;
+    font-size:14px;
+    margin-bottom:5px;
+}
+
+.project h3 {
+    margin-bottom: 5px;
+    color: @brown;
+    font-size: 16px;
+    font-family: @georgia-font;
+    font-style:italic;
+    font-weight:bold;
+}
+
+.project-image {
+    float: left;
+    margin:0 15px 0 5px;
+    width: 147px;
+    height: 130px;
+    background-image: url(/images/projects/sprite.png); 
+    -webkit-box-shadow: 1px 2px 7px #333;
+    box-shadow: 1px 2px 7px #333;
+}
+
+.project-managemmychain
+{
+    background-position:0 -130px;
+}
+
+.project-portchesterbiz
+{
+    background-position:0 -260px;
+}
+
+.project-partybelles
+{
+    background-position:0 -390px;
+}
+
+.project-moneybox
+{
+    background-position:0 -520px;
+}
+
+.project-ethnicraft
+{
+    background-position:0 -650px;
+}
+
+.project-aqua
+{
+    background-position:0 -780px;
+}
+
+.project-easyoffice
+{
+    background-position:0 -910px;
+}
+
+.project-grc
+{
+    background-position:0 -1050px;
+}
+
+.project-segmantics
+{
+    background-position:0 -1170px;
+}
+
+.project-description {
+    float: left;
+    width: 350px;
+}
+
+a.read {
+    background: #EFEDE4;
+    border-radius: 3px;
+    display: table;
+    font-size: 12px;
+    padding: 2px 10px;
+    text-transform: capitalize;
+    color:@brown;
+    font-family: @georgia-font;
+}
+
+a.read:hover {
+    background: #CBC9C1;
+    text-decoration:none;
+}
+
+.middle
+{
+    height:300px;
+    background: url(/images/home-middle.png) repeat-x top;
+    margin:0 5px;
+    padding:15px;
+}
+
+.middle:after {
+    position: relative;
+    left:100%;
+    top: -270px;
+    display: block;
+    width: 27px;
+    height: 328px;
+    background-image: url(/images/home-middle-tape.png);
+    content: "";
+}
+
+.gdcd:before 
+{
+    position: relative;
+    right: 25px;
+    top: -75px;
+    display: block;
+    width: 27px;
+    height: 328px;
+    background-image: url(/images/home-middle-tape.png);
+    content: "";
+}
+
+.middle .gdcd
+{
+    width:468px;
+    height:198px;
+    background: #ffffff url(/images/gdcd.png) no-repeat center center;
+}
+
+.middle .tech
+{
+    width:300px;
+    height:198px;
+    background: #ffffff;
+    padding:15px;
+    color: #444348;
+    font-family: @georgia-font;
+    font-size: 20px;
+}
+
+.middle .tech .row
+{
+    padding:3px 0;
+}
+
+.middle .tech span
+{
+    color:#999999;
+}
