--- a/partials/home.html
+++ b/partials/home.html
@@ -10,7 +10,7 @@
                     <div class="col-md-7">
                         <h3>Segmantics</h3>
                         <p>The worlds first software as a service risk management webapp. Built using the latest JavaScript...</p>
-                        <a class="read">read</a>
+                        <a class="read" href="#work">read</a>
                     </div>
                 </div>
             </div>
@@ -24,17 +24,17 @@
                     <div class="col-md-7">
                         <h3>Aqua Cars</h3>
                         <p>Both Mobile and Desktop applicationsfor the UK’s third largest taxi company were built using HTML5,...</p>
-                        <a class="read">read</a>
+                        <a class="read" href="#work">read</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="middle">
+    <div class="paper">
         <div class="row">
             <div class="col-md-7">
-                <h2 class="margin-bottom-15 overflow">GDCD <a class="read pull-right margin-top-10">view</a></h2>
+                <h2 class="margin-bottom-15 overflow">GDCD <a class="read pull-right margin-top-10" href="#gdcd">view</a></h2>
                 <div class="gdcd"></div>
             </div>
             <div class="col-md-5">
@@ -90,5 +90,4 @@
             </div>
         </div>
     </div>
-
 </div>
