--- a/css/site.css
+++ b/css/site.css
@@ -1,16 +1,16 @@
 ﻿/*
 
-        Created on : 2013-12-18
-        Author : Greg Duncan
-        Description: Stylesheet for front-end website.
+    Created on : 2013-12-18
+    Author : Greg Duncan
+    Description: Stylesheet for front-end website.
 
-        0. Less
-        1. Resets
-        2. Globals
-        3. Header Nav
-        4. Masthead
-        5. Sidebar
-        6. Content
+    0. Less
+    1. Resets
+    2. Globals
+    3. Header Nav
+    4. Masthead
+    5. Sidebar
+    6. Content
 
 **/
 /* 0. Less */
@@ -98,452 +98,422 @@ tt,
 u,
 ul,
 var {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    border: 0 none;
-    background: transparent;
-    vertical-align: top;
-    font-size: 100%;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: 0 none;
+  background: transparent;
+  vertical-align: top;
+  font-size: 100%;
 }
-
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
-
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
-
 table,
 table td {
-    padding: 0;
-    border: none;
-    border-collapse: collapse;
+  padding: 0;
+  border: none;
+  border-collapse: collapse;
 }
-
 img {
-    vertical-align: bottom;
+  vertical-align: bottom;
 }
-
 a img {
-    border: none;
+  border: none;
 }
-
 embed {
-    vertical-align: top;
+  vertical-align: top;
 }
-
 a {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 /* 2. Globals */
 h1,
 h2,
 h3,
 h4 {
-    font-family: 'Archivo Black', sans-serif;
-    color: #5f5050;
+  font-family: 'Archivo Black', sans-serif;
+  color: #5f5050;
 }
-
 body {
-    background: url(../images/bg.png);
-    font-family: 'Open Sans', sans-serif;
+  background: url(../images/bg.png);
+  font-family: 'Open Sans', sans-serif;
 }
-
 .overflow {
-    overflow: hidden;
+  overflow: hidden;
 }
-
 .container {
-    padding: 0;
-    max-width: 1175px;
-    margin: 0 auto;
+  padding: 0;
+  max-width: 1175px;
+  margin: 0 auto;
 }
-
 .margin-bottom-5 {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
-
 .margin-bottom-10 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
-
 .margin-bottom-15 {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
-
 .margin-bottom-20 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
 .margin-bottom-30 {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
-
 .margin-top-5 {
-    margin-top: 5px;
+  margin-top: 5px;
 }
-
 .margin-top-10 {
-    margin-top: 10px;
+  margin-top: 10px;
 }
-
 .margin-top-15 {
-    margin-top: 15px;
+  margin-top: 15px;
 }
-
 .margin-top-20 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
-
 .margin-top-30 {
-    margin-top: 30px;
+  margin-top: 30px;
 }
-
 .padding-bottom-5 {
-    padding-bottom: 5px;
+  padding-bottom: 5px;
 }
-
 .padding-bottom-10 {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
-
 .padding-bottom-15 {
-    padding-bottom: 15px;
+  padding-bottom: 15px;
 }
-
 .padding-bottom-20 {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
-
 .padding-bottom-30 {
-    padding-bottom: 30px;
+  padding-bottom: 30px;
 }
-
+.btn-default {
+  background-color: #5f5050;
+  border-color: #5f5050;
+  color: #ffffff;
+}
+.btn-default:hover {
+  background-color: #776d6d;
+  border-color: #776d6d;
+  color: #ffffff;
+}
 /* 3. Header Nav */
 .navbar {
-    position: absolute;
-    top: 0;
-    text-transform: uppercase;
-    font-family: 'Archivo Black', sans-serif;
+  position: absolute;
+  top: 0;
+  text-transform: uppercase;
+  font-family: 'Archivo Black', sans-serif;
 }
-
 .navbar .nav > li {
-    float: left;
+  float: left;
 }
-
 .navbar .nav > li > a {
-    display: block;
-    padding: 10px 20px;
-    color: #5f5050;
-    font-size: 18px;
+  display: block;
+  padding: 10px 20px;
+  color: #5f5050;
+  font-size: 18px;
 }
-
 .navbar .nav > li > a.active {
-    background: #5f5050;
-    color: #ffffff;
-    -webkit-text-shadow: none;
-    text-shadow: none;
+  background: #5f5050;
+  color: #ffffff;
+  -webkit-text-shadow: none;
+  text-shadow: none;
 }
-
 .navbar .nav > li > a:hover {
-    background: #5f5050;
-    color: #ffffff;
-    -webkit-text-shadow: none;
-    text-shadow: none;
+  background: #5f5050;
+  color: #ffffff;
+  -webkit-text-shadow: none;
+  text-shadow: none;
 }
-
 .content {
-    padding-right: 0;
-    padding-left: 0;
+  padding-right: 0;
+  padding-left: 0;
 }
-
 /* 4. Masthead */
 .masthead {
-    margin-left: 60px;
-    height: 295px;
-    background: url(../images/header.png) repeat-x bottom;
+  margin-left: 60px;
+  height: 295px;
+  background: url(../images/header.png) repeat-x bottom;
 }
-
 .masthead:before {
-    position: relative;
-    left: -60px;
-    display: inline-block;
-    float: left;
-    width: 60px;
-    height: 295px;
-    background: url(../images/header-left.png) no-repeat bottom;
-    content: "";
+  position: relative;
+  left: -60px;
+  display: inline-block;
+  float: left;
+  width: 60px;
+  height: 295px;
+  background: url(../images/header-left.png) no-repeat bottom;
+  content: "";
 }
-
 .masthead:after {
-    display: inline-block;
-    float: right;
-    width: 600px;
-    height: 295px;
-    background: url(../images/header-right-new-new.png) no-repeat bottom;
-    content: "";
+  display: inline-block;
+  float: right;
+  width: 600px;
+  height: 295px;
+  background: url(../images/header-right-new-new.png) no-repeat bottom;
+  content: "";
 }
-
 .masthead > a {
-    position: relative;
-    top: 68px;
-    right: 40px;
-    display: inline-block;
-    width: 340px;
-    height: 140px;
-    background: url(../images/logo.png) no-repeat;
+  position: relative;
+  top: 68px;
+  right: 40px;
+  display: inline-block;
+  width: 340px;
+  height: 140px;
+  background: url(../images/logo.png) no-repeat;
 }
-
 .masthead > a:after {
-    position: relative;
-    top: 150px;
-    display: inline-block;
-    color: #5f5050;
-    content: "u.i developer / programmer";
-    text-transform: uppercase;
-    font-size: 18px;
-    font-family: 'Archivo Black', sans-serif;
+  position: relative;
+  top: 150px;
+  display: inline-block;
+  color: #5f5050;
+  content: "u.i developer / programmer";
+  text-transform: uppercase;
+  font-size: 18px;
+  font-family: 'Archivo Black', sans-serif;
 }
-
 /* 5. Sidebar */
 .sidebar {
-    width: 300px;
-    padding: 40px 30px 0 30px;
-    min-height: 240px;
-    background: url(../images/rhs.png) no-repeat;
-    float: right;
+  width: 300px;
+  padding: 40px 30px 0 30px;
+  min-height: 240px;
+  background: url(../images/rhs.png) no-repeat;
+  float: right;
 }
-
 .sidebar:after {
-    position: relative;
-    right: 30px;
-    display: block;
-    width: 300px;
-    height: 40px;
-    background: url(../images/rhs-bottom.png) no-repeat bottom;
-    content: "";
+  position: relative;
+  right: 30px;
+  display: block;
+  width: 300px;
+  height: 40px;
+  background: url(../images/rhs-bottom.png) no-repeat bottom;
+  content: "";
 }
-
 .sidebar h2 {
-    color: #ffffff;
-    font-size: 18px;
-    line-height: 25px;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 25px;
 }
-
 .sidebar h3 {
-    margin: 40px 0 10px 0;
-    color: #ffffff;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-family: 'Archivo Black', sans-serif;
-    line-height: 25px;
+  margin: 40px 0 10px 0;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-family: 'Archivo Black', sans-serif;
+  line-height: 25px;
 }
-
 .sidebar ul > li {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
-
 .sidebar input[type="text"] {
-    padding: 8px 0;
-    width: 230px;
-    border: 3px solid #5f5050;
-    border-radius: 3px;
-    color: #5f5050;
-    text-indent: 5px;
-    font-family: 'Open Sans', sans-serif;
+  padding: 8px 0;
+  width: 230px;
+  border: 3px solid #5f5050;
+  border-radius: 3px;
+  color: #5f5050;
+  text-indent: 5px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
 }
-
 .sidebar textarea {
-    padding: 8px 0;
-    width: 230px;
-    height: 120px;
-    border: 3px solid #5f5050;
-    border-radius: 3px;
-    color: #5f5050;
-    text-indent: 5px;
-    font-size: 13px;
-    font-family: 'Open Sans', sans-serif;
+  padding: 8px 0;
+  width: 230px;
+  height: 120px;
+  border: 3px solid #5f5050;
+  border-radius: 3px;
+  color: #5f5050;
+  text-indent: 5px;
+  font-size: 13px;
+  font-family: 'Open Sans', sans-serif;
 }
-
 .sidebar .recommends {
-    width: 224px;
-    height: 180px;
-    border: 3px solid #5f5050;
-    background: url(../images/recommends.png) no-repeat bottom;
+  width: 224px;
+  height: 180px;
+  border: 3px solid #5f5050;
+  background: url(../images/recommends.png) no-repeat bottom;
 }
-
 .sidebar .recommends > a {
-    display: block;
-    width: 224px;
-    height: 180px;
+  display: block;
+  width: 224px;
+  height: 180px;
 }
-
 .sidebar .recommends > a:hover {
-    background: #000;
-    opacity: 0.3;
+  background: #000;
+  opacity: 0.3;
 }
-
 /* 6. Content */
 .content-inner {
-    min-height: 700px;
-    padding-bottom: 50px;
+  min-height: 700px;
+  padding-bottom: 50px;
 }
-
 .page {
-    padding-top: 20px;
+  padding-top: 20px;
 }
-
 .page h2 {
-    font-size: 30px;
+  font-size: 30px;
 }
-
 /* 7. Projects */
 .project {
-    color: #5f5050;
-    font-family: Georgia;
-    margin-bottom: 60px;
+  color: #5f5050;
+  font-family: Georgia;
+  margin-bottom: 60px;
 }
-
 .project a {
-    color: #5f5050;
+  color: #5f5050;
 }
-
 .project p {
-    color: #333;
-    font-size: 14px;
-    margin-bottom: 5px;
+  color: #333;
+  font-size: 14px;
+  margin-bottom: 5px;
 }
-
+.project.full p {
+  font-size: 12px;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 18px;
+}
+.project.full .external {
+  color: #5f5050;
+  font-size: 14px;
+  font-family: Georgia;
+  font-style: italic;
+  font-weight: bold;
+  text-decoration: underline;
+}
+.project.full .external:hover {
+  text-decoration: none;
+}
 .project h3 {
-    margin-bottom: 5px;
-    color: #5f5050;
-    font-size: 16px;
-    font-family: Georgia;
-    font-style: italic;
-    font-weight: bold;
+  margin-bottom: 5px;
+  color: #5f5050;
+  font-size: 16px;
+  font-family: Georgia;
+  font-style: italic;
+  font-weight: bold;
 }
-
 .project-image {
-    float: left;
-    margin: 0 15px 0 5px;
-    width: 147px;
-    height: 130px;
-    background-image: url(/images/projects/sprite.png);
-    -webkit-box-shadow: 1px 2px 7px #333;
-    box-shadow: 1px 2px 7px #333;
+  float: left;
+  margin: 0 15px 0 5px;
+  width: 147px;
+  height: 130px;
+  background-image: url(/images/projects/sprite.png);
+  -webkit-box-shadow: 1px 2px 7px #333;
+  box-shadow: 1px 2px 7px #333;
 }
-
 .project-managemmychain {
-    background-position: 0 -130px;
+  background-position: 0 -130px;
 }
-
 .project-portchesterbiz {
-    background-position: 0 -260px;
+  background-position: 0 -260px;
 }
-
 .project-partybelles {
-    background-position: 0 -390px;
+  background-position: 0 -390px;
 }
-
 .project-moneybox {
-    background-position: 0 -520px;
+  background-position: 0 -520px;
 }
-
 .project-ethnicraft {
-    background-position: 0 -650px;
+  background-position: 0 -650px;
 }
-
 .project-aqua {
-    background-position: 0 -780px;
+  background-position: 0 -780px;
 }
-
 .project-easyoffice {
-    background-position: 0 -910px;
+  background-position: 0 -910px;
 }
-
 .project-grc {
-    background-position: 0 -1050px;
+  background-position: 0 -1050px;
 }
-
 .project-segmantics {
-    background-position: 0 -1170px;
+  background-position: 0 -1170px;
 }
-
+.project-instant {
+  background-position: 0 -1300px;
+}
 .project-description {
-    float: left;
-    width: 350px;
+  float: left;
+  width: 350px;
 }
-
 a.read {
-    background: #EFEDE4;
-    border-radius: 3px;
-    display: table;
-    font-size: 12px;
-    padding: 2px 10px;
-    text-transform: capitalize;
-    color: #5f5050;
-    font-family: Georgia;
+  background: #EFEDE4;
+  border-radius: 3px;
+  display: table;
+  font-size: 12px;
+  padding: 2px 10px;
+  text-transform: capitalize;
+  color: #5f5050;
+  font-family: Georgia;
 }
-
 a.read:hover {
-    background: #CBC9C1;
-    text-decoration: none;
+  background: #CBC9C1;
+  text-decoration: none;
 }
-
-.middle {
-    height: 300px;
-    background: url(/images/home-middle.png) repeat-x top;
-    margin: 0 5px;
-    padding: 15px;
+.paper {
+  height: 300px;
+  background: url(/images/home-middle.png) repeat-x top;
+  margin: 0 5px;
+  padding: 15px;
 }
-
-.middle:after {
-    position: relative;
-    left: 100%;
-    top: -270px;
-    display: block;
-    width: 27px;
-    height: 328px;
-    background-image: url(/images/home-middle-tape.png);
-    content: "";
+.paper:after {
+  position: relative;
+  left: 100%;
+  top: -270px;
+  display: block;
+  width: 27px;
+  height: 328px;
+  background-image: url(/images/home-middle-tape.png);
+  content: "";
 }
-
 .gdcd:before {
-    position: relative;
-    right: 25px;
-    top: -75px;
-    display: block;
-    width: 27px;
-    height: 328px;
-    background-image: url(/images/home-middle-tape.png);
-    content: "";
+  position: relative;
+  right: 25px;
+  top: -75px;
+  display: block;
+  width: 27px;
+  height: 328px;
+  background-image: url(/images/home-middle-tape.png);
+  content: "";
 }
-
-.middle .gdcd {
-    width: 468px;
-    height: 198px;
-    background: #ffffff url(/images/gdcd.png) no-repeat center center;
+.paper .gdcd {
+  width: 468px;
+  height: 198px;
+  background: #ffffff url(/images/gdcd.png) no-repeat center center;
 }
-
-.middle .tech {
-    width: 300px;
-    height: 198px;
-    background: #ffffff;
-    padding: 15px;
-    color: #444348;
-    font-family: Georgia;
-    font-size: 20px;
+.paper .tech {
+  width: 300px;
+  height: 198px;
+  background: #ffffff;
+  padding: 15px;
+  color: #444348;
+  font-family: Georgia;
+  font-size: 20px;
 }
-
-.middle .tech .row {
-    padding: 3px 0;
+.paper .tech .row {
+  padding: 3px 0;
 }
-
-.middle .tech span {
-    color: #999999;
+.paper .tech span {
+  color: #999999;
+}
+.skills h4 {
+  color: #333333;
+  font-family: Georgia;
+  font-size: 16px;
+  font-style: italic;
+  padding-bottom: 5px;
+  font-weight: bold;
+}
+.skills ul {
+  color: #5f5050;
+  font-family: Georgia;
+  font-size: 13px;
+  margin-bottom: 15px;
 }
