--- a/partials/work.html
+++ b/partials/work.html
@@ -1,1 +1,123 @@
-﻿<h2>Work</h2>
+﻿<div class="page">
+    <h2 class="margin-bottom-30">Projects</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-segmantics"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Segmantics</h3>
+                        <p>The worlds first software as a service risk management webapp. Built as a single page application, MVC5, Knockout.js, Web API, Require.js and Grunt. Integrated unit testing with Jasmine. SignalR, Bootstrap and Angular.js also included. Open authentication with Facebook, Google, Twitter and LinkedIn.</p>
+                        <a class="external" target="_blank" href="http://www.segmantics.com">www.segmantics.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-aqua"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Aqua Cars</h3>
+                        <p>Both Mobile and Desktop applications for the UK’s third largest taxi company were built using HTML5, CSS3 and jQuery. The cross platform mobile website built in jQuery Mobile and gives the full functionality of a native app but with higher accessibility. Servers side the applications use .NET Webmatrix infrastructure.</p>
+                        <a class="external" target="_blank" href="http://www.aquacars.co.uk">www.aquacars.co.uk</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Target Offices</h3>
+                        <p>Target Offices is a multi-tiered ASP.Net application built in C# with an Object-Oriented Programming (OOP) design. The website incorporates unique User Interface (UI), Business Logic (BLL) and Data Access (DAL) layers. Ajax, XML, Linq, XHTML, CSS, and JavaScript are also used throughout the project.</p>
+                        <a class="external" target="_blank" href="http://www.targetoffices.com">www.targetoffices.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-instant"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Instant Offices</h3>
+                        <p>A complete front-end re-skin, updating HTML, CSS and javaScript. This was a massive project integrating a new design to a bespoke content management system that produces thousands of pages. The project was completed on time, and under budget. Visual Basic programming was also involved.</p>
+                        <a class="external" target="_blank" href="http://www.instantoffices.com">www.instantoffices.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-easyoffice"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Easy Office</h3>
+                        <p>A custom white label system built to expand EasyOffice global office database. The project involved upgrading existing technology to work within new ASP.NET frameworks. The website is designed in VB.NET, SQL, HTML4 and CSS2. The project involved heavy front end development.</p>
+                        <a class="external" target="_blank" href="http://www.easyoffice.co.uk">www.easyoffice.co.uk</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image  project-grc"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Level 2 GRC</h3>
+                        <p>An original and collaborative project, this application was built using complex SQL 2008 stored procedures, ASP.NET 3.5, C# 3.5, HTML5 and CSS2. The software implements a number of JavaScript libraries including jQuery. Windows Services, Web Services, and XML are used throughout.</p>
+                        <a class="external" target="_blank" href="http://www.level2grc.com">www.level2grc.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-ethnicraft"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>Ethnicraft</h3>
+                        <p>Built using the latest .NET Webmatrix technology in C#4.0, Ethnicraft for Trading Boundaries has a fully customised CMS system for sales and product management. The website backend utilises .NET Dynamic Data infrastructure, for fast robust development. Client side jQuery is used throughout to produce a slick responsive interface with HTML5 and CSS3.</p>
+                        <a class="external" target="_blank" href="http://ethnicraft.tradingboundaires.com">www.ethnicraft.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="project full">
+                <div class="row">
+                    <div class="col-md-5">
+                        <div class="project-image project-partybelles"></div>
+                    </div>
+                    <div class="col-md-7">
+                        <h3>The Party Belles</h3>
+                        <p>A bespoke CMS system was built in .NET 3.5 to give full control of website content to site administrators. The GUI utilises .NET Ajax and jQuery. The application revolves around an MS SQL database fully incorporated into a nTier development architecture.</p>
+                        <a class="external" target="_blank" href="http://www.thepartybelles.co.uk">www.thepartybelles.co.uk</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
